--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,6 @@
   <version>v.1.0</version>
   <name>Hello</name>
   <url>http://maven.apache.org</url>
-  
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
@@ -15,25 +14,21 @@
   </parent>
   <build>
     <plugins>
-      <plugin>
-        <!-- Build an executable JAR -->
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-jar-plugin</artifactId>
-        <version>3.1.0</version>
-        <configuration>
-          <archive>
-            <manifest>
-              <addClasspath>true</addClasspath>
-              <!-- <classpathPrefix>lib/</classpathPrefix> -->
-              <mainClass>com.example.springboot.Hello.HelloWorldController</mainClass>
-            </manifest>
-          </archive>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-maven-plugin</artifactId>
-      </plugin>
+        <plugin>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-maven-plugin</artifactId>             
+            <executions>
+                 <execution>
+                     <goals>
+                         <goal>repackage</goal>
+                     </goals>
+                     <configuration>
+                         <classifier>spring-boot</classifier>
+                         <mainClass>com.example.springboot.Hello.HelloWorldController</mainClass>
+                     </configuration>
+                 </execution>
+             </executions>
+        </plugin>
     </plugins>
   </build>
   <dependencies>
@@ -41,7 +36,6 @@
     	<groupId>org.springframework.boot</groupId>
     	<artifactId>spring-boot-starter-web</artifactId>
   	</dependency>
-  
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
