--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
                      </goals> -->
                      <configuration>
                          <classifier>spring-boot</classifier>
-                         <mainClass>com.example.springboot.Hello.HelloWorldController</mainClass>
+                         <mainClass>com.example.springboot.Hello.Main</mainClass>
                      </configuration>
                  </execution>
              </executions>
