--- a/pom.xml
+++ b/pom.xml
@@ -13,23 +13,39 @@
     <version>2.1.2.RELEASE</version>
   </parent>
   <build>
-    <plugins>
-        <plugin>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-maven-plugin</artifactId>             
-            <executions>
-                 <execution>
-                     <!-- <goals>
-                         <goal>repackage</goal>
-                     </goals> -->
-                     <configuration>
-                         <classifier>spring-boot</classifier>
-                         <mainClass>com.example.springboot.Hello.Main</mainClass>
-                     </configuration>
-                 </execution>
-             </executions>
-        </plugin>
-    </plugins>
+  <plugins>
+    <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+            <source>1.8</source>
+            <target>1.8</target>
+        </configuration>
+    </plugin>
+    <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-shade-plugin</artifactId>
+        <version>3.0.0</version>
+        <executions>
+            <execution>
+                <phase>package</phase>
+                <goals>
+                    <goal>shade</goal>
+                </goals>
+                <configuration>
+                    <transformers>
+                        <transformer
+                                implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                            <manifestEntries>
+                                <Main-Class>com.example.springboot.Hello.Main</Main-Class>
+                            </manifestEntries>
+                        </transformer>
+                    </transformers>
+                </configuration>
+            </execution>
+        </executions>
+    </plugin>
+  </plugins>
   </build>
   <dependencies>
   	<dependency>
