--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,14 @@
   </parent>
   <build>
   <plugins>
-    <plugin>
+    <plugins>  
+        <plugin>  
+            <groupId>org.springframework.boot</groupId>  
+            <artifactId>spring-boot-maven-plugin</artifactId>  
+            <version>4.0.1</version>  
+        </plugin>  
+    </plugins>
+    <!--<plugin>
       <!-- Build an executable JAR -->
       <groupId>org.apache.maven.plugins</groupId>
       <artifactId>maven-jar-plugin</artifactId>
@@ -26,7 +33,7 @@
           </manifest>
         </archive>
       </configuration>
-    </plugin>
+    </plugin>-->
   </plugins>
   </build>
   <dependencies>
