--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
         <groupId>org.springframework.boot</groupId>  
         <artifactId>spring-boot-maven-plugin</artifactId> 
     </plugin>
-    <!--<plugin>
+    <plugin>
       <groupId>org.apache.maven.plugins</groupId>
       <artifactId>maven-jar-plugin</artifactId>
       <version>2.4</version>
@@ -29,7 +29,7 @@
           </manifest>
         </archive>
       </configuration>
-    </plugin>-->
+    </plugin>
   </plugins>
   </build>
   <dependencies>
