--- a/pom.xml
+++ b/pom.xml
@@ -14,21 +14,19 @@
   </parent>
   <build>
   <plugins>  
-    <plugin>  
-        <groupId>org.springframework.boot</groupId>  
-        <artifactId>spring-boot-maven-plugin</artifactId> 
-    </plugin>
     <plugin>
-      <groupId>org.apache.maven.plugins</groupId>
-      <artifactId>maven-jar-plugin</artifactId>
-      <version>2.4</version>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-maven-plugin</artifactId>
       <configuration>
-        <archive>
-          <manifest>
-            <mainClass>com.example.springboot.Hello.Main</mainClass>
-          </manifest>
-        </archive>
+          <mainClass>com.example.springboot.Hello.Main</mainClass>
       </configuration>
+      <executions>
+          <execution>
+              <goals>
+                  <goal>repackage</goal>
+              </goals>
+          </execution>
+      </executions>
     </plugin>
   </plugins>
   </build>
